fix(backend): security audit remediation (P0–P3) and platform parity APIs
Security
- Payme: reject blank cashbox keys, sandbox key only in test mode, fail-fast config validation
- Telegram: mandatory webhook secret (constant-time), no contact-based linking of staff or
  already-linked accounts, global brute-force breaker for login codes, no codes in logs
- DefaultUserInitializer: disabled by default, no hardcoded passwords, never resets existing users
- Ed25519 license: remove leaked seed fallback
- JWT: 30 min access tokens bound to a device session (sid), revoked sessions and blocked users
  rejected immediately; refresh token also issued as HttpOnly cookie (X-Auth-Mode: cookie)
- Paywall: ticket start checks package access; offline bundle filters paid tickets per user
- check-answer only for the caller's active session and locks the answer (V10)
- Google access-token audience check; only the verified registration channel is marked verified
- Simulator/autodrom: auth required, ownership checks (no userId=1 fallback)
- Trusted-proxy aware client IP (rate-limit spoofing), download token limited to download paths
- record-offline: idempotent by clientSessionId (V8), clamped timestamps, entitlement check,
  implausible results excluded from stats; server-controlled marathon duration/pass mark
- Restore: no pooled-connection session_replication_role leaks; caches cleared after restore
- Mass-assignment protection for News/FAQ, QR approval validated before issuing tokens
- PII removed from logs, validated X-Request-Id, payment unique provider tx index (V9)

Correctness / platform parity
- Atomic question counters (no optimistic-lock 500s on concurrent submits), autosave graded
- Accept-Language parsing, blank-aware translation fallback, complete messages in 4 languages
- New endpoints: public exam-rules, offline-bundle v2 (questions/topics/tickets, ETag),
  device list/revoke, PATCH /auth/me language
- Spring Boot 3.4.7, Prometheus (internal only), optional Sentry, Depr